--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.8.2",
     "babel-plugin-import": "^1.8.0",
+    "gh-pages": "^1.2.0",
     "npm": "^6.4.0",
     "react": "^16.4.2",
     "react-app-rewired": "^1.5.2",
@@ -14,9 +15,12 @@
     "redux": "^4.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "https://daisybookya.github.io/show-note"
 }
